# goad_toolkit

./: .gitignore  README.md  pyproject.toml
demo/: linear.py
src/goad/: __init__.py  analytics.py  config.py  dataprocessor.py  datatransforms.py  distributions.py  filehandler.py  main.py  models.py  visualizer.py
src/goad_toolkit/: analytics.py  config.py  dataprocessor.py  distributions.py  filehandler.py  models.py  visualizer.py
