[project]
name = "goad-toolkit"
version = "0.1.2"
description = "An extensible toolkit for Goal Oriented Analysis of Data"
readme = "README.md"
authors = [
    { name = "raoul grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
urls = {Github = "https://github.com/yourusername/your-repo"}

[project.scripts]
goad = "goad:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "pyright>=1.1.397",
    "ruff>=0.11.0",
]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N", "C4", "DTZ", "PT", "S"]
